fixed a lot of things and whole file is wrapped in anonymous function.  also you can stop each slot individually now

--- a/slot.css
+++ b/slot.css
@@ -4,7 +4,7 @@
     margin: 0 auto;
 }
 
-.spin {
+.center {
     display: block;
     margin: 0 auto;
 }
